[package]
name = "pictl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2"
dirs = "5.0.1"
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
